Update jdk-25+ openjdk.test.debugging to use asm.jar
Signed-off-by: Andrew Leonard <anleonar@redhat.com>