@@ -39,6 +39,7 @@ limitations under the License.
 	<property name="openjdk_test_debugging_src_dir" value="src/${openjdk_test_debugging_module}" />
 	<property name="openjdk_test_debugging_src_80_110_dir" value="src_80_110/${openjdk_test_debugging_module}" />
 	<property name="openjdk_test_debugging_src_150_dir" value="src_150/${openjdk_test_debugging_module}" />
+        <property name="openjdk_test_debugging_src_250_dir" value="src_250/${openjdk_test_debugging_module}" />
 	<property name="openjdk_test_debugging_bin_dir" value="bin" />
 
 	<property name="openjdk_test_debugging_jdi_jar_file" value="${openjdk_test_debugging_bin_dir}/JdiTests.jar" />
@@ -59,13 +60,42 @@ limitations under the License.
 	<condition property="isJavas11" value="true">
 		<equals arg1="${java.specification.version}" arg2="11"/>
 	</condition>
+
+	<condition property="isJavas17" value="true">
+		<equals arg1="${java.specification.version}" arg2="17"/>
+	</condition>
+
+	<condition property="isJavas21" value="true">
+		<equals arg1="${java.specification.version}" arg2="21"/>
+	</condition>
+
+	<condition property="isJavas23" value="true">
+		<equals arg1="${java.specification.version}" arg2="23"/>
+	</condition>
+
+	<condition property="isJavas24" value="true">
+		<equals arg1="${java.specification.version}" arg2="24"/>
+	</condition>
 	
-	<condition property="isBelowJava12" value="true">
+	<condition property="isJavas17to24" value="true">
+		<or>
+			<isset property="isJavas17"/>
+			<isset property="isJavas21"/>
+			<isset property="isJavas23"/>
+			<isset property="isJavas24"/>
+		</or>
+	</condition>
+
+	<condition property="isBelowJava25" value="true">
 		<or>
 			<isset property="isJavas8"/>
 			<isset property="isJavas11"/>
+			<isset property="isJavas17"/>
+			<isset property="isJavas21"/>
+			<isset property="isJavas23"/>
+			<isset property="isJavas24"/>
 		</or>
-	</condition>
+	</condition> 
 
 	<!-- Projects which need to be built before this one. -->
 	<!-- dir must be set on the ant task otherwise the basedir property is not set to a new value in the subant task. -->
@@ -108,7 +138,7 @@ limitations under the License.
 		</jar>
 	</target>
 
-	<target name="build-java" depends="build-java-8, build-java-11, build-java-above-11" />
+	<target name="build-java" depends="build-java-8, build-java-11, build-java-17-24, build-java-25-plus" />
 		
 	<target name="build-java-8" if="${isJavas8}" depends="check-prereqs, create-bin-dir">
 		 <!--
@@ -167,7 +197,7 @@ limitations under the License.
 		</javac>
 	</target>
 		
-	<target name="build-java-above-11" unless="${isBelowJava12}" depends="check-prereqs, create-bin-dir">
+	<target name="build-java-17-24" if="${isJavas17to24}" depends="check-prereqs, create-bin-dir">
 		<property name="addExports" value="--add-exports java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED" />
 		<javac srcdir="${openjdk_test_debugging_src_dir}"
 			destdir="${openjdk_test_debugging_bin_dir}"
@@ -186,6 +216,25 @@ limitations under the License.
 			<compilerarg line='${addExports}' />
 		</javac>
 	</target>
+
+        <target name="build-java-25-plus" unless="${isBelowJava25}" depends="check-prereqs, create-bin-dir">
+                <javac srcdir="${openjdk_test_debugging_src_dir}"
+                        destdir="${openjdk_test_debugging_bin_dir}"
+                        fork="true"
+                        executable="${java_compiler}"
+                        debug="true"
+                        classpathref="project.class.path"
+                        encoding="${src-encoding}"
+                        includeantruntime="false"
+                        failonerror="true">
+                        <src path="${openjdk_test_debugging_src_dir}" />
+                        <src path="${openjdk_test_debugging_src_250_dir}" />
+                        <compilerarg value="-source"/>
+                        <compilerarg value="${java.specification.version}"/>
+                        <compilerarg value="--enable-preview"/>
+                        <compilerarg line='${addExports}' />
+                </javac>
+        </target>
 	
 	<target name="create-bin-dir">
 		<mkdir dir="${openjdk_test_debugging_bin_dir}"/>
